--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     ]
   },
   "scripts": {
-    "server": "nodemon server.js",
+    "start": "node server.js",
+    "dev":"nodemon server.js",
     "test": "node --trace-warnings --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll"
   },
   "author": "",
